src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationIntAssignBool.deca
//Description :
//	affectation d'un boolean à une variable définie comme int
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : 

{
	int x;
	x = true;
	println(x);
}